--- a/dotOnion/_locales/en/messages.json
+++ b/dotOnion/_locales/en/messages.json
@@ -13,52 +13,52 @@
    },
    
    "save_settings": {
-      "description": "",
+      "description": "Save settings",
       "message": "Save settings"
    },
    "test_connection": {
-      "description": "",
+      "description": "Test connection",
       "message": "Test connection"
    },
    "not_configured":{
-      "description": "",
+      "description": "dotOnion IS NOT configured and will not work! Please see the \"Settings\" tab to configure!",
       "message": "dotOnion IS NOT configured and will not work! Please see the \"Settings\" tab to configure!"
    },
    "word_warning": {
-      "description": "",
+      "description": "WARNING",
       "message": "WARNING"
    },
    "word_info": {
-      "description": "",
+      "description": "Info",
       "message": "Info"
    },
    "word_settings": {
-      "description": "",
+      "description": "Settings",
       "message": "Settings"
    },
    "word_about": {
-      "description": "",
+      "description": "About",
       "message": "About"
    },
    "word_port": {
-      "description": "",
+      "description": "Port",
       "message": "Port"
    },
    "word_host": {
-      "description": "",
+      "description": "Host",
       "message": "Host"
    },
    "useExternal": {
-      "description": "",
+      "description": "The Tor SOCKS server is running on \u003CI>this computer:\u003C/I>",
       "message": "The Tor SOCKS server is running on \u003CI>this computer:\u003C/I>"
    },
    "useLocal": {
-      "description": "",
+      "description": "The Tor SOCKS server is running on \u003CI>a different computer:\u003C/I>",
       "message": "The Tor SOCKS server is running on \u003CI>a different computer:\u003C/I>"
    },
    
    "about_top": {
-      "description": "",
+      "description": "dotOnion is a simple tor proxy handler, made for those who just want to access .onion domains, but do not need extra security/privacy.",
       "message": "dotOnion is a simple tor proxy handler, made for those who just want to access .onion domains, but do not need extra security/privacy."
    },
    "about_mid": {
@@ -66,8 +66,12 @@
       "message": "\u003Cb>If you are using dotOnion for privacy, I highly recommend getting the \u003Ca href=\"https://www.torproject.org/projects/torbrowser.html.en\">Tor Browser\u003C/a> instead.\u003C/b> It is a lot more secure as it does other stuff to protect your privacy, dotOnion is only intended for letting you access tor sites, it doesn't add any security layers."
    },
    "about_crafted": {
-      "description": "",
+      "description": "dotOnion is hand crafted by Hyenas, with love! :3",
       "message": "dotOnion is hand crafted by Hyenas, with love! :3"
+   },
+   "source_code": {
+      "description": "Get the source code here!",
+      "message": "Get the source code here!"
    }
    
 }
